--- a/src/locales/fr/landing.json
+++ b/src/locales/fr/landing.json
@@ -20,26 +20,26 @@
       "subtitle": "Notre neuf plan de token répartition comune sans égal",
       "title": "Devenez un membre fondateur à gagner les tokens Mainnet en inluer le développement de la plateforme.",
       "alternateTitle": "Devenez un membre fondateur por avoir un impact tangible sur le développement de la plateforme.",
-      "link": "Apprenez plus de notre programme genereuse"
+      "link": "Apprenez plus de notre programme généreuse"
     },
     "whatWeDo": {
-      "subtitle": "Notre motivation pour édifier le protocole de la Joystream",
-      "title": "We call for an arrangement where media platforms are accountable to the people they impact.",
-      "link": "Read our manifesto"
+      "subtitle": "Notre motivation pour édifièr le protocole de la Joystream",
+      "title": "Nouse demandons un arrangement où les plateformes médiàs sont responsables desant ses utilisanteurs",
+      "link": "Lisez notre manifeste"
     },
     "whyYouShouldJoin": {
-      "title": "Why join our testnets?",
+      "title": "Pourquoi s'inscrire notre testnets?",
       "reasons": {
         "tokens": {
           "title": "Tokens",
-          "text": "Earn tokens distributed on mainnet, launching 2021"
+          "text": "Gagnez les tokens distribué sur mainnet, lançant en 2021"
         },
         "cash": {
-          "title": "Cash",
-          "text": "Get rewarded with real money for your participation"
+          "title": "Liquide",
+          "text": "Recevoir une récompense de Pargent pour votre partìcipation."
         },
         "reputationAndSkill": {
-          "title": "Reputation & Skill",
+          "title": "La réputation et l'habileté",
           "text": "Gain the knowledge required to participate on mainnet"
         }
       }
