--- a/src/locales/fr/landing.json
+++ b/src/locales/fr/landing.json
@@ -40,71 +40,71 @@
         },
         "reputationAndSkill": {
           "title": "La réputation et l'habileté",
-          "text": "Gain the knowledge required to participate on mainnet"
+          "text": "Avoir la connaissance requise pour partciper sur mainnet"
         }
       }
     },
     "exploreJoystream": {
-      "title": "Explore Joystream Now",
-      "subtitle": "Two fast evolving apps for consuming content and governance activities.",
+      "title": "Explorer Joystream Maintenant",
+      "subtitle": "Les deux apps qui evoluent rapidement la consumption de son contenu et les activité gouvernantes.",
       "atlas": {
-        "text": "Atlas is the flagship content consumer and publishing app for Joystream. Watch videos, follow creators and discover new featured content, or create a channel and build your audience.",
-        "link": "Try out Atlas",
-        "imageAlt": "overview visual of Atlas"
+        "text": "L'Atlas est le produit vedette et consommateur du cortenu et l'app publiant pour Joystream. Regardezles vidéos, suivez les créateurs et découvrez les nouveux contenus, presentés, ou cré ez une  et chaine construisez l'audience.",
+        "link": "Essayez l'Atlas",
+        "imageAlt": "Aperçu visuel d'Atlas"
       },
       "pioneer": {
-        "text": "Pioneer is the place to participate in community governance and operation. Vote on elections, submit proposals to fund your project or get enter a paid role to power the platform.",
-        "link": "Try out Pioneer",
-        "imageAlt": "overview visual of Pioneer"
+        "text": "Pioneer est l'endroite à participer en l'opération et gourvenance de la contenue comune",
+        "link": "Essayez Pioneer",
+        "imageAlt": "Aperçu visuel du Pioneer"
       }
     },
     "roadToMainnet": {
-      "title": "Road to mainnet",
+      "title": "La rue à mainnet",
       "testnetState": {
-        "Current": "Current testnet",
-        "Past": "Past testnet",
-        "Future": "Future testnet"
+        "Current": "Testnet actuel",
+        "Past": "Testnet passé",
+        "Future": "Testnet futur"
       },
       "released": {
-        "Current": "Released on ",
-        "Past": "Released on ",
-        "Future": "Will be live on "
+        "Current": "Sorti ",
+        "Past": "Sorti ",
+        "Future": "Sera en directe "
       },
       "testnets": {
         "Sparta": {
           "title": "Sparta testnet",
-          "text": "Sparta is our second testnet, introducing a variety of important technical improvements.",
-          "explore": "Explore Sparta"
+          "text": "Sparta est notre deuxième testnet, il introduit une variété d'amélioration des technologiques importantes.",
+          "explore": "Explorez Sparta"
         },
         "Athens": {
           "title": "Athens testnet",
-          "text": "Athens is our third testnet, introducing a variety of important technical improvements.",
-          "explore": "Explore Athens"
+          "text": "Athens est notre troisième testnet, il introduit une variété d'amélioration des technologiques importantes.",
+          "explore": "Explorez Athens"
         },
         "Acropolis": {
           "title": "Acropolis testnet",
-          "text": "Acropolis is our fourth testnet, introducing a variety of important technical improvements.",
-          "explore": "Explore Acropolis"
+          "text": "Acropolis est notre quatrième testnet, il introduit une variété d'amélioration des technologiques importantes.",
+          "explore": "Explorez Acropolis"
         },
         "Rome": {
           "title": "Rome testnet",
-          "text": "Rome is our second fifth, introducing a variety of important technical improvements.",
-          "explore": "Explore Rome"
+          "text": "RRome est notre cinquième testnet, il introduit une variété d'amélioration des technologiques importantes.",
+          "explore": "Explorez Rome"
         },
         "Constantinople": {
           "title": "Constantinople testnet",
-          "text": "Constantinople is our sixth testnet, introducing a variety of important technical improvements.",
-          "explore": "Explore Constantinople"
+          "text": "Constantinople est notre sixième testnet, il introduit une variété d'amélioration des technologiques importantes.",
+          "explore": "Explorez Constantinople"
         },
         "Alexandria": {
           "title": "Alexandria testnet",
-          "text": "Alexandria is our second seventh, introducing a variety of important technical improvements.",
-          "explore": "Explore Alexandria"
+          "text": "Alexandria est notre septième testnet, il introduit une variété d'amélioration des technologiques importantes.",
+          "explore": "Explorez Alexandria"
         },
         "Babylon": {
           "title": "Babylon testnet",
-          "text": "Babylon is our second eighth, introducing a variety of important technical improvements.",
-          "explore": "Explore Babylon"
+          "text": "Babylon est notre huitième testnet, il introduit une variété d'amélioration des technologiques importantes.",
+          "explore": "Explorez Babylon"
         },
         "Antioch": {
           "title": "Antioch testnet",
